# HycStorCommon

./: .gitmodules  CMakeLists.txt  CodingStyle.md  README.md  setup.sh
experiment/: README  multiple-bins-transactional-update.c  single-bin-transactional-update.c
experiment/tools/: AerospikeScanCache.c  Makefile  crc32.c  get_checksum.sh
experiment/utils/: StordGitBuild.py  StordGitBuildFio.py  add_lun.py  add_lun.sh  add_tgt.py  add_tgt.sh  aero_stat.py  ckpt_delete.py  ckpt_merge.py  config.ini  config.py  flush_data_validator.py  flush_script_pattern_fs.sh  flush_start.py  flush_start_fs.py  flush_status.py  global_stat.py  hyc_merge_rec_module.lua  pattern_fs.sh  rh_line_graph.py  rto_multidisk.py  test_cleanup.py  test_cleanup.sh  test_multidisk.py  test_multidisk_parallel.py  test_read_ahead_config.py  test_rto_file_target.py  test_tgt.py  test_tgt.sh  tgt_crash_test.py  vmdk_scan_start.py
src/: AeroConfig.cpp  AeroConn.cpp  AeroFiberThreads.cpp  Analyzer.cpp  ArmConfig.cpp  BlockTraceHandler.cpp  CMakeLists.txt  CkptMergeInstance.cpp  CkptMergeManager.cpp  FlushConfig.cpp  FlushInstance.cpp  FlushManager.cpp  LibAio.cpp  LockHandler.cpp  MetaDataKV.cpp  RamCache.cpp  RamCacheHandler.cpp  RangeLock.cpp  ReadAhead.cpp  Request.cpp  RequestHandler.cpp  Rest.cpp  ScanInstance.cpp  ScanManager.cpp  SetCkptBmapConfig.cpp  TgtInterfaceImpl.cpp  ThreadPool.cpp  UnalignedHandler.cpp  Utils.cpp  VddkTargetLib.cpp  VirtualMachine.cpp  VmConfig.cpp  VmManager.cpp  Vmdk.cpp  VmdkCacheStats.cpp  VmdkConfig.cpp  VmdkFactory.cpp
src/C-Client/: CMakeLists.txt  TestClient.c
src/Commands/: AeroBench.cpp  AeroConfig.cpp  CMakeLists.txt  PrefetchBench.cpp  RunBenchmark.py  SimpleDataVerification.cpp  VmConfig.cpp  VmdkConfig.cpp
src/Common/: BackGroundWorker.cpp  CMakeLists.txt  ConfigConsts.cpp  JsonConfig.cpp  QLock.cpp  RecurringTimer.cpp  Rendez.cpp  SpinLock.cpp  TgtInterfaceImpl.cpp  ThreadPool.cpp  TimePoint.cpp  Utils.cpp  WorkScheduler.cpp
src/Common/tests/: BackGroundWorkTests.cpp  CMakeLists.txt  JsonConfigTests.cpp  QLockTests.cpp  RendezTests.cpp  SingletonTests.cpp  SpinLockTests.cpp  SystemTests.cpp  UtilsTests.cpp  WorkSchedulerTests.cpp
src/CommonLib/: CMakeLists.txt  IOTrack.cpp  JsonConfig.cpp  QLock.cpp  SharedMemory.cpp  SpinLock.cpp  ThreadPool.cpp  TimePoint.cpp  Utils.cpp
src/CommonLib/tests/: CMakeLists.txt  UtilsTests.cpp
src/DataMover/: ArmSync.cpp  ArmSync.h  CheckPointTraverser.cpp  CheckPointTraverser.h  DataCopier.cpp  DataCopier.h  DataMoverCommonTypes.h  DataReader.cpp  DataReader.h  DataSync.cpp  DataSync.h  DataWriter.cpp  DataWriter.h  SyncAny.cpp  SyncAny.h  SyncCookie.cpp  SyncCookie.h  VmSync.cpp  VmSync.h
src/RequestHandlers/: AeroOps.cpp  BlockTraceHandler.cpp  CacheHandler.cpp  CacheTargetHandler.cpp  CleanHandler.cpp  CompressHandler.cpp  DirtyHandler.cpp  EncryptHandler.cpp  ErrorHandler.cpp  FileCacheHandler.cpp  FileTargetHandler.cpp  LockHandler.cpp  MultiTargetHandler.cpp  NetworkTargetHandler.cpp  RamCacheHandler.cpp  RequestHandler.cpp  SuccessHandler.cpp  TargetHandler.cpp  UnalignedHandler.cpp  VddkOps.cpp  VddkTargetHandler.cpp
src/RestServer/: CMakeLists.txt  HycRestServer.cpp
src/RestServer/include/: HycRestServer.h
src/include/: AeroConfig.h  AeroConn.h  AeroFiberThreads.h  AeroOps.h  AeroSpike.h  Analyzer.h  ArmConfig.h  BackGroundWorker.h  BlockTraceHandler.h  CacheHandler.h  CacheTargetHandler.h  CkptMergeInstance.h  CkptMergeManager.h  CleanHandler.h  Common.h  CommonMacros.h  CompressHandler.h  ConfigConsts.h  DaemonCommon.h  DaemonTgtInterface.h  DaemonTgtTypes.h  DaemonUtils.h  DirtyHandler.h  EncryptHandler.h  ErrorHandler.h  FileCacheHandler.h  FileTargetHandler.h  FlushConfig.h  FlushInstance.h  FlushManager.h  IDs.h  IOTrack.h  JsonConfig.h  JsonHelper.h  LibAio.h  LockHandler.h  MetaDataKV.h  MovingAverage.h  MultiTargetHandler.h  NetworkTargetHandler.h  (+40 more)
src/prefetch/: CMakeLists.txt  Makefile  dc.c  dc.h  defs.h  ghb.c  ghb.h
src/prefetch/tests/: Makefile  gtest  gtest.c
src/stord/: CMakeLists.txt  StorageDaemon.cpp
src/tests/: CMakeLists.txt  CompressHandlerTest.cpp  EncryptHandlerTest.cpp  ErrorHandlerTests.cpp  FileCacheTests.cpp  JsonConfigTests.cpp  PreloadTest.cpp  QLockTests.cpp  RamCacheTests.cpp  RangeLockTests.cpp  ReadAheadTests.cpp  RequestTests.cpp  RoaringBitmapTest.cpp  SingletonTests.cpp  SpinLockTests.cpp  SuccessHandlerTests.cpp  SystemTests.cpp  TestCheckPointTraverser.cpp  TestDataCopier.cpp  TestDataSync.cpp  TestDataWriterReader.cpp  TestSyncCookie.cpp  TestVmSync.cpp  TgtInterfaceTests.cpp  TruncateTest.cpp  UnalignedHandlerTests.cpp  UtilsTests.cpp  VirtualMachineTests.cpp  VmdkTests.cpp
src/thrift/: CMakeLists.txt  MetaData.thrift  StorRpc.thrift
src/thrift-client/: CMakeLists.txt  LocalIP.cpp  TgtInterfaceImpl.cpp
src/thrift-client/tests/: CMakeLists.txt  TestMain.cpp  TgtInterfaceImplTests.cpp
